<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/amber"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/beds"
        android:scaleType="fitXY"
        android:id="@+id/bed_id"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/bed_text"/>
    <TextView
        android:layout_width="match_parent"
        android:textAlignment="center"
        android:layout_height="30dp"
        android:textSize="25sp"
        android:id="@+id/textview_bed_name"
        android:textStyle="italic"
        android:text="@string/bed_no"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:id="@+id/textview_price_status"
        android:textSize="25sp"
        android:text="@string/date_price"/>

    <TextView
        android:id="@+id/textview_date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/date_booked"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="#FF5722"
                android:text="Confirm \nBooking"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:background="#FFA000"
                android:text="Cancel"
                android:textSize="17sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>