<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/amber"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/linear_layout_first"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_bed_1"
                    android:layout_width="110dp"
                    android:textSize="20dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:background="#FF7043"
                    android:text="@string/bed_1" />

                <Button
                    android:id="@+id/button_bed_2"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="70dp"
                    android:textSize="20dp"
                    android:background="#FF7043"
                    android:text="@string/bed_2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.01"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_bed_3"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:background="#FF7043"
                    android:textSize="20dp"
                    android:text="@string/bed_3" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_basin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/basin" />

            <TextView
                android:id="@+id/floorName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="200dp"
                android:text="Floor 1"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/colorPrimaryDark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.3"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.5"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_second"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:text="Bathroom"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.01"
                android:background="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/button_bed_4"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:background="#FF7043"
                    android:text="@string/bed_4"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/button_bed_5"
                    android:layout_width="110dp"
                    android:layout_height="50dp"
                    android:textSize="20dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="100dp"
                    android:background="#FF7043"
                    android:text="@string/bed_5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#F9A825"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:id="@+id/bed_name_textView"
                android:paddingTop="8dp"
                android:textStyle="bold"
                android:paddingLeft="20dp"
                android:text="@string/direct_to_choose_beds"/>

            <TextView
                android:id="@+id/availablity_textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="20dp"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:textSize="25sp"
                tools:text="@string/available" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textSize="25sp"
                android:id="@+id/price_textView"
                android:textStyle="bold"
                android:paddingTop="8dp"
                android:paddingLeft="20dp"
                tools:text="@string/price"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="0.5">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:layout_width="40dp"
                    android:id="@+id/top_button"
                    android:background="@drawable/ic_keyboard_arrow_up_black_36dp"
                    android:layout_marginLeft="18dp"

                    android:layout_height="40dp" />
                <Button
                    android:id="@+id/down_button"
                    android:layout_width="40dp"
                    android:background="@drawable/ic_keyboard_arrow_down_black_36dp"
                    android:layout_marginLeft="18dp"
                    android:layout_height="40dp" />
            </LinearLayout>
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textSize="20dp"
                android:id="@+id/button_to_book"
                android:layout_marginTop="50dp"
                android:textColor="#FFFFFF"
                android:background="#D50000"
                android:text="@string/book"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>